# Multi-File-Multi-Language-CMAKE

./: CMakeLists.txt  Makefile
cmake/: FindGo.cmake
golang/: hello.go
include/: hellow.h
lib/: libhello.h
src/: main.cpp
